--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 
-    <org.springframework.version>5.1.1.RELEASE</org.springframework.version>
+    <org.springframework.version>4.0.0.RELEASE</org.springframework.version>
     <org.mybatis.spring.version>1.3.0</org.mybatis.spring.version>
     <org.mybatis.version>3.4.1</org.mybatis.version>
     <maven.compiler.source>1.7</maven.compiler.source>
@@ -106,11 +106,11 @@
       <version>1.5.4</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-core-asl -->
+    <!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-core-asl</artifactId>
-      <version>1.9.13</version>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>1.9.12</version>
     </dependency>
 
     <dependency>
