--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -5,3 +5,5 @@ ftp.pass=ftppassword
 ftp.server.http.prefix=http://img.happymmall.com/
 
 
+password.salt = cxhsdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+
